...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Rate per hour ($)" />
        </android.widget.LinearLayout>

        <ListView
            android:id="@+id/listAllServices"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:isScrollContainer="true"
            android:scrollbars="vertical">

        </ListView>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="associateServices"
            android:text="Associate Services" />
    </LinearLayout>
...
