...
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:theme="@style/ThemeOverlay.MyTextDetail" />

                <EditText
                    android:id="@+id/editPhoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="phone"
                    android:visibility="gone" />
...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/editAccountBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="editAccountDetails"
            android:text="@string/edit_account" />

        <LinearLayout
...
